--- a/Payments.Api/Properties/launchSettings.json
+++ b/Payments.Api/Properties/launchSettings.json
@@ -12,18 +12,20 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "payment",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "PaymentsConnectionString": "Server=127.0.0.1; Port=4999; Database=paymentsDataBase; Uid=paymentsUser; Pwd=paymentsPassword;"
       }
     },
     "Payments.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "payment",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "PaymentsConnectionString": "Server=127.0.0.1; Port=4999; Database=paymentsDataBase; Uid=paymentsUser; Pwd=paymentsPassword;"
       }
     }
   }
